syntax = "proto3";

package salonapp.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/williamchand/fullstack-fastapi/backend-go/gen/proto/salonapp/v1;salonappv1";

service WeddingService {
  rpc CreateWedding(CreateWeddingRequest) returns (WeddingResponse) {
    option (google.api.http) = { post: "/v1/weddings" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc GetWedding(GetWeddingRequest) returns (WeddingResponse) {
    option (google.api.http) = { get: "/v1/weddings/{id}" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc UpdateConfig(UpdateConfigRequest) returns (WeddingResponse) {
    option (google.api.http) = { put: "/v1/weddings/{id}/config" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc SetTemplate(SetTemplateRequest) returns (WeddingResponse) {
    option (google.api.http) = { put: "/v1/weddings/{id}/template" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc SetDomain(SetDomainRequest) returns (WeddingResponse) {
    option (google.api.http) = { put: "/v1/weddings/{id}/domain" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc SetSlug(SetSlugRequest) returns (WeddingResponse) {
    option (google.api.http) = { put: "/v1/weddings/{id}/slug" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc Publish(PublishRequest) returns (WeddingResponse) {
    option (google.api.http) = { post: "/v1/weddings/{id}/publish" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc AddGuest(AddGuestRequest) returns (GuestResponse) {
    option (google.api.http) = { post: "/v1/weddings/{id}/guests" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc UpdateGuest(UpdateGuestRequest) returns (GuestResponse) {
    option (google.api.http) = { put: "/v1/weddings/{id}/guests/{guest_id}" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc DeleteGuest(DeleteGuestRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { delete: "/v1/weddings/{id}/guests/{guest_id}" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
  rpc ListGuests(ListGuestsRequest) returns (GuestsResponse) {
    option (google.api.http) = { get: "/v1/weddings/{id}/guests" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { security: { security_requirement: { key: "BearerAuth" value: {} } } };
  }
}

message Wedding {
  string id = 1;
  string user_id = 2;
  string template_id = 3;
  string payment_id = 4;
  string status = 5;
  string custom_domain = 6;
  string slug = 7;
  string config_json = 8;
  int64 created_at = 9;
}

message Guest {
  string id = 1;
  string wedding_id = 2;
  string name = 3;
  string contact = 4;
  string rsvp_status = 5;
  string message = 6;
  int64 created_at = 7;
}

message CreateWeddingRequest { string template_id = 1; string config_json = 2; }
message GetWeddingRequest { string id = 1; }
message WeddingResponse { Wedding wedding = 1; }
message UpdateConfigRequest { string id = 1; string config_json = 2; }
message SetTemplateRequest { string id = 1; string template_id = 2; }
message SetDomainRequest { string id = 1; string domain = 2; }
message SetSlugRequest { string id = 1; string slug = 2; }
message PublishRequest { string id = 1; }

message AddGuestRequest { string id = 1; string name = 2; string contact = 3; string rsvp_status = 4; string message = 5; }
message UpdateGuestRequest { string id = 1; string guest_id = 2; string name = 3; string contact = 4; string rsvp_status = 5; string message = 6; }
message DeleteGuestRequest { string id = 1; string guest_id = 2; }
message ListGuestsRequest { string id = 1; }
message GuestResponse { Guest guest = 1; }
message GuestsResponse { repeated Guest guests = 1; }
